--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_checklist">ChecklistActivity</string>
     <string name="title_activity_initial">InitialActivity</string>
+    <string name="title_activity_visitation">VisitationActivity</string>
 
 </resources>
