--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">Tecomat CheckList</string>
@@ -6,5 +7,8 @@
     <string name="title_activity_checklist">ChecklistActivity</string>
     <string name="title_activity_initial">InitialActivity</string>
     <string name="title_activity_visitation">VisitationActivity</string>
+    <string name="title_activity_see_work">SeeWorkActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_main">MainActivity</string>
 
 </resources>
